--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ lxml = "^5.2.2"
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
 
+[tool.black]
+line-length = 120
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
