--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -3,12 +3,16 @@ name: Python CI
 on:
   push:
     branches:
-      - '*'
-    tags:
-      - 'v*'
+      - master
+    pull_requests:
+      types: [merged]
+
 
 permissions:
   contents: write
+
+env:
+  PYTHON_VERSION: 3.11
 
 jobs:
   compile:
@@ -21,19 +25,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "$PYTHON_VERSION"
 
       - name: Compile Python app
         run: python3 -m compileall .
 
 
   build:
-    name: Build package
+    name: Build and release package
+    if: "startsWith(github.event.head_commit.message, 'chore: bump version to')"
 
     needs:
       - compile
-
-    if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
 
@@ -48,7 +51,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "$PYTHON_VERSION"
           #cache: 'poetry'
 
       - name: Set up Poetry
@@ -60,11 +63,20 @@ jobs:
       - name: Build package
         run: poetry build --no-interaction
 
-      - name: Upload package as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist
+      - name: Get current version
+        id: version
+        run: echo "version=$(poetry version --short --no-interaction)" >> "$GITHUB_OUTPUT"
+
+      - name: Setup git
+        run: |
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+
+      - name: Tag commit with version
+        run: git tag "v${{ steps.version.outputs.version }}" -m "${{ steps.version.outputs.version }}"
+
+      - name: Push tag
+        run: git push --tags
 
       - name: Publish package on PyPI
         env:
@@ -77,6 +89,6 @@ jobs:
           files: dist/*
           draft: false
           prerelease: false
-          tag_name: ${{ github.ref }}
+          tag_name: v${{ steps.version.outputs.version }}
           name: ${{  github.ref_name }}
           generate_release_notes: true
